# Protocol

./: CMakeLists.txt
metidaProtocol/: base64.h  packetFactory.cpp  packetFactory.h  packetType.h
metidaProtocol/server/: dataPacketServer.cpp  dataPacketServer.h
metidaProtocol/universal/: handshakePacket.cpp  handshakePacket.h  learningDataPacket.cpp  learningDataPacket.h  pingPacket.cpp  pingPacket.h
